v0.9.8, 04/01/2018 -- Minor Revision
* ...

v0.9.7, 03/31/2018 -- Minor Revision
* Removed np.int16 and np.float16 from JustNpNum
* Added JustGen to check for GenratorType
* Added JustKey, JustValue, and JustItem to check dictionary views
* Added support fo deque, defaultdict, and OrderedDict
* Many mores smalls tweaks under the hood ...

v0.9.6, 02/7/2018 -- Minor Revision
* Added Contains validator
* Fixed bug in Bounded decorator
* OneOf now accepts dict, dict_keys, dict_values, and dict_items as items
* JustLen now accepts lengths also as frozenset, dict, dict_keys, and dict_values
* Some fixes to error and log messages

v0.9.5, 02/7/2018 -- Minor Revision
* Added the validator Identifier

v0.9.4, 01/25/2018 -- Minor revision
* Renamed "all_len" keyword in AllLen validator to "alen"
* Renamed "all_hi" and "all_lo" keywords in AllLimited to "alo" and "ahi"
* Fixed various docstring
* Refined various error messages

v0.9.3, 01/22/2018 -- Minor revision
* Fixed various docstrings
* Added frozenset type checker JustFrozen to types.one

v0.9.2, 01/12/2018 -- Minor revision
* Added TypedDict type checker
* Added TypedTuple type checker
* Added LimitedTuple validator
* Refactored error messages for the All validators and type checkers
* Added skipping type checks in Typed decorator for arguments marked with ...
* Added skipping limit checks in Bounded decorator for arguments marked with ...
* Added type introspection for iterables to Typed decorator
* Refactored error messages from Typed decorator
* Added bounds introspection for iterables to Bounded decorator
* Refactored error messages from Bounded decorator
* Renamed Call validator to JustCall

v0.9.1, 01/12/2018 -- Minor revision
* Added type checkers for functions and methods
* Added validator for callables

v0.9.0, 01/12/2018 -- Initial release