@@ -1,4 +1,5 @@
 # To Do
+
 - Add numpy JustSize validator?
 - Add validator for checking if object has attributes?
   - Add validators for all attributes of the Collections abstract base classes?
