@@ -1,6 +1,7 @@
 try:
     from .justndim import JustNdim
     from .justshape import JustShape
+    from .justsize import JustSize
 except ImportError as error:
     __all__ = []
     message = ('Could not import numpy. Is it correctly'
